# vulkan-guide

./: .gitignore  CMakeLists.txt  launch.vs.json
android_gradle/: build.gradle  gradle.properties  settings.gradle
android_gradle/app/: CMakeLists.txt  build.gradle  main.cpp  native_app_glue_included.c
android_gradle/app/android/: AndroidManifest.xml
android_gradle/app/android/java/com/georgebig2/vulkan-guide/: SampleLauncherActivity.java
android_gradle/app/android/java/com/georgebig2/vulkan_guide/: SampleLauncherActivity.java
android_gradle/app/android/res/mipmap-anydpi-v26/: ic_launcher.xml
android_gradle/app/android/res/values/: strings.xml  styles.xml
asset-baker/: CMakeLists.txt  asset_main.cpp
assetlib/: asset_loader.cpp  asset_loader.h  material_asset.cpp  mesh_asset.cpp  mesh_asset.h  prefab_asset.h  texture_asset.cpp
assets/city/: city.gltf
extra-engine/: CMakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h  vk_engine_scenerender.cpp  vk_mesh.cpp  vk_profiler.cpp  vk_scene.cpp  vk_scene.h  vk_shaders.cpp
libs/Debug/: EtcLib.lib  bc6h.lib  bc7.lib  nvcore.lib  nvimage.lib  nvmath.lib  nvsquish.lib  nvthread.lib  nvtt.lib  posh.lib  rg_etc1.lib
libs/Release/: bc6h.lib  bc7.lib  nvcore.lib  nvimage.lib  nvmath.lib  nvsquish.lib  nvthread.lib  posh.lib  rg_etc1.lib
rengine/: CMakeLists.txt  common.h  cvars.cpp  frame_data.h  hud.cpp  logger.h  material_system.cpp  material_system.h  player_camera.cpp  player_camera.h  render_graph.cpp  render_graph.h  render_passes.cpp  rengine.cpp  rengine.h  svg.h  vk.h  vk_descriptors.cpp  vk_descriptors.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_profiler.cpp  vk_pushbuffer.cpp  vk_scene.cpp  vk_scene.h  vk_shaders.cpp  vk_shaders.h  vk_textures.cpp  vk_textures.h  vk_types.h
shaders/: build_shaders.bat  default_lit.frag  default_lit.frag.spv  hud.vert  indirect_cull.comp  indirect_cull.comp.spv  textured_lit.frag  textured_lit.frag.spv  tri_mesh_ssbo.vert  tri_mesh_ssbo.vert.spv  tri_mesh_ssbo_instanced.vert  tri_mesh_ssbo_instanced.vert.spv  tri_mesh_ssbo_instanced_shadowcast.vert  tri_mesh_ssbo_instanced_shadowcast.vert.spv
